infrastructure/postgres/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  namespace: postgres
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/name: postgresql
